--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,84 @@ body {
   padding: 0;
   margin: 0;
 }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  html {
+    font-family: 'Jost', sans-serif;
+  }
+  
+  body {
+    margin: 0;
+    font-family: 'Jost', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
+}
+
+@layer components {
+  .container-custom {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 24px;
+  }
+  
+  .section-padding {
+    padding: 120px 0;
+  }
+  
+  .heading-1 {
+    font-family: 'Archivo', sans-serif;
+    font-size: 66px;
+    line-height: 76px;
+    font-weight: 700;
+  }
+  
+  .heading-2 {
+    font-family: 'Archivo', sans-serif;
+    font-size: 48px;
+    line-height: 58px;
+    font-weight: 700;
+  }
+  
+  .heading-3 {
+    font-family: 'Archivo', sans-serif;
+    font-size: 36px;
+    line-height: 46px;
+    font-weight: 600;
+  }
+  
+  .heading-4 {
+    font-family: 'Archivo', sans-serif;
+    font-size: 30px;
+    line-height: 40px;
+    font-weight: 600;
+  }
+  
+  .heading-5 {
+    font-family: 'Archivo', sans-serif;
+    font-size: 24px;
+    line-height: 34px;
+    font-weight: 600;
+  }
+  
+  .heading-6 {
+    font-family: 'Archivo', sans-serif;
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 500;
+  }
+  
+  .paragraph {
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 400;
+  }
+} 
