--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   margin: 0;
   padding: 0;
   text-align: left;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
 
 .logo {
